--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: pointycastle
+name: pc-dart
 version: 1.0.2
 author: The Pointy Castle team
 description: A Dart library implementing cryptographic algorithms
